--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,8 +11,10 @@
 @import url('./animations.css');
 
 /* Sections style */
-@import url('./header.css');
+@import url('./hover.css');
 @import url('./vite-promo.css');
+@import url('./1-gallery.css');
+@import url('./2-form.css');
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
